kubernetes/apps/paperless/redis.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-redis
  namespace: paperless
  labels:
    app: paperless-redis
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless-redis
  template:
    metadata:
      labels:
        app: paperless-redis
    spec:
      securityContext:
        fsGroup: 999
      containers:
        - name: redis
          image: redis:8
          args:
            - redis-server
            - --save
            - "60"
            - "1"
          ports:
            - containerPort: 6379
              protocol: TCP
              name: redis
          resources:
            requests:
              cpu: 50m
              memory: 64Mi
            limits:
              cpu: 250m
              memory: 256Mi
          volumeMounts:
            - mountPath: /data
              name: data
      volumes:
        - name: data
          persistentVolumeClaim:
            claimName: paperless-redis-data
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-redis
  namespace: paperless
  labels:
    app: paperless-redis
spec:
  type: ClusterIP
  ports:
    - port: 6379
      targetPort: 6379
      protocol: TCP
      name: redis
  selector:
    app: paperless-redis
