kubernetes/apps/paperless/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: paperless
  namespace: paperless
  labels:
    app: paperless
spec:
  type: ClusterIP
  ports:
    - port: 8000
      targetPort: 8000
      protocol: TCP
      name: http
  selector:
    app: paperless
