kubernetes/apps/paperless/tika.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: paperless-tika
  namespace: paperless
  labels:
    app: paperless-tika
spec:
  replicas: 1
  strategy:
    type: Recreate
  selector:
    matchLabels:
      app: paperless-tika
  template:
    metadata:
      labels:
        app: paperless-tika
    spec:
      containers:
        - name: tika
          image: apache/tika:latest
          ports:
            - containerPort: 9998
              protocol: TCP
              name: http
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 1000m
              memory: 1Gi
---
apiVersion: v1
kind: Service
metadata:
  name: paperless-tika
  namespace: paperless
  labels:
    app: paperless-tika
spec:
  type: ClusterIP
  ports:
    - port: 9998
      targetPort: 9998
      protocol: TCP
      name: http
  selector:
    app: paperless-tika
